# learncpp

./: .gitignore  .gitmodules
01/: Makefile
01/src/: main.cpp
02/: Makefile
02/inc/: tracer.h
02/src/: main.cpp  tracer.cpp
03/: CMakeLists.txt  Makefile.01  Makefile.02  Makefile.03  script_build_cmake.bat  script_build_makefile.bat  script_clean.bat
03/inc/: Calc.h
03/src/: Calc.cpp  main.cpp
04/: CMakeLists.txt  script_build.bat  script_clean.bat  script_configure.bat  script_rebuild.bat
04/inc/: Calc.h
04/src/: Calc.cpp  main.cpp
04/test/: CMakeLists.txt  test_calc_01.cpp
oskachkov/boost_asio/: boost_asio.pro
oskachkov/boost_asio/async/: async.pro  main.cpp
oskachkov/boost_asio/boost_fusion/: boost_fusion.pro  is_stl_container.h  main.cpp  serializers.h  serializers_b.h  sfinea.h  test.h  test1.cpp  test2.cpp  test3.cpp
oskachkov/boost_asio/build-c_server-Desktop_Qt_5_5_1_MSVC2013_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
oskachkov/boost_asio/build-c_server-Desktop_Qt_5_5_1_MSVC2013_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
oskachkov/boost_asio/c_server/: c_server.pro  logger.cpp  logger.h  main.cpp  message.h  server_impl.cpp  server_impl.h  session.cpp  session.h  types.h
oskachkov/boost_asio/memberAsHandler/: main.cpp  memberAsHandler.pro
oskachkov/boost_asio/serial_asio/: asyncserial.cpp  bufferedasyncserial.cpp  bufferedasyncserial.h  (+3 more)
oskachkov/operators/: field.h  main.cpp  sfinae.h  shared_ptr.h  test.pro  unique_ptr.h  variant.cpp  variant.h  weak_ptr.h
oskachkov/stringbuf_ex/: main.cpp
(+32 files in other folders)
